Going back to string id with unique constraint for resource provider ids
